src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_c__tests__isfahan_120x40.snap
---
source: src/modes/_101_p02_glm53f_max_c.rs
assertion_line: 782
expression: "text(&frame(120, 40, 42, 0.0, &knobs()))"
---
           '      '.   .                                                                                 '              
                                      '                 :                                              :     '          
                                                    '                        '   .                               :      
                                .                           :.    :           '                                         
            '                          .         .     :                  :  .                  .                     . 
                                   '                          :                                          '              
                                                : . :                                                         .         
                                             :                                                                   '    : 
  :                                                                                :   :                                
                 '                                         ''                                                         ' 
  :         :    :    \\\\\\\\\\\\       :                %%%%           :::::::::::::            #            '        
             .        %%%%%%%%%%%%%            :    %%#          #%%     ::::::::::::             #                     
  '.             :    %%%%%%%%%%%%%  :::::::::::%##            | /   ##%           ::             # .                   
                      %%%%%     .  ::::::::: %#    ·     ||   ||/        #%:         %%%%%%%%   . /  '.                 
                :     \             :::   %#        ·    ##||||#||||     |  #%:::   %%%%%%%%%%%%%                       
      '               #    .      \\\   # ·                \#   +---+   ##||||##:::   ///%%%%%%%%                       
                      ##      \\\%%%% #     ·      ·     ||| ##-+         \#   +-#-    '  ////%%                      : 
 :      .             ###\\\\%%%%%%%#           ·    x\ | #-- \\#        |||##-+   #      :                     '       
                  '.      %%%%%%%%%           |/   ##◇ #       \ #      |+--  \\|    %        #####                     
                         : %%%%% #      |||  |#/     ||    ·  ·               \ #     #%     ######                     
          '                 %  %        ##||||#|||+     ·                 ·   ·         %%% //#####               .     
                          \\\ #           \#   +----             ·     ·                 #%   ///##                     
                       \\\####         ||||-###|       ·         ·              ·      #||#      //                     
 .        '           \\#####            +-  \\#       ·              ·          ·   ||#|| #    .                       
: :                   #####%| /               \    #\     ·     ·     ·              #\# | ◆%                           
  :   :               #####| #/             | /  ##◇|#       ·           ·     ·      #-## \##                          
               '      #### |#|||#+    #||  |#/     |       | /              ·         ||#-####         '   .            
      .      . :      ### # -##----    ##|||#|||++    ||  ||/           ·   ·              # \#   #                     
            :          \  -## |         |#\  #----   ###|||#||||+    ·                  ·  ·   # //                     
                :     \\\-  \\#      ||||--##|          ##  +----   ·         ·      ·                  .               
      : :             \##    \         #-   \\#      |||--##||                 ·   ·         ·                    .     
                      ###·  ·               \         #-   \\#       ·                        ·     .                   
  :                    ●●●     ·        ·  ·               \   //#\    ·  ·  ·      ·         ●●●       :               
    '       '       '  #             ·        ·        |||||   #|◇|#                  ·      ·  #            '        : 
                       #       ·    ·              |#||||||||#   |     ·  ·               ·   /##      :.      '   :  ::
   .                   #      ·               ·    #|#|| |-+#--     ·       ·           | /  #|◇#              :        
                       #   ·        ·        ·      #\ |◇\ /|++   ·               #||  |#/     |#                       
      .                #               ·  ·        #-###--#-+                ·     ##|||#|||+   #                       
              :        #                            | #-#x\\+      ·                |#\ -+----  #                       
.        .             #                                             ·  ·  ·     ||||--#\|      #           .
