src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_c__tests__isfahan_80x24_seed2026.snap
---
source: src/modes/_101_p02_glm53f_max_c.rs
assertion_line: 839
expression: "text(&frame(80, 24, 2026, 0.0, &knobs()))"
---
                           '   ::                                .       : '    
                       '  '                                                     
                                        :          .                      :     
                                 . ':             '   :                         
              ''     :                   ' ::                                   
                              :         '   .     . :      '           '       :
                                       ''                                       
           .      \%%%%%%%  :        %%##%%    :::::::        ##                
          :       %%%%%%  :::::: %#   #|||#  #%:   : '%%      ##:  :            
                 \#       :   %#       ##|##+- ·#%::: /%%%%%%               .   
                 ##  \\%%%%.#         |#-###   ·   #:      //                   
                    %%%%% #  · · ·     || \     · · ·#% .   ####   .            
 .                      %   ·     ·  |#||||#  # |||    %%%%/####              : 
   '              \\## #     ·    ·  ##|◇-#+  ##||+#-  ·#%    // '              
 '               ######/ #◇## · ·    +#####   ##+◇##+ ·  #                      
                 ### ###|+| · · ·     |||     |##x#+   ·  ##                    
                     ##+-- ·     ·  |#||||#  #||||      ·|/###//                
        .        ###  \# x  ·    ·  ###◆-#+  ##|◆+#- #|||#                      
                 ###||| #◇## · ·    ++####   #####++  \# #++-            '      
                   ●●|+#-  · · ··    |||     |###\   |+-#\#●●                   
                   #+◆##+ ·     ·  |#|||+#  #||||      · \  #                   
            '      ##x#+   ·   ·   ###◇-#+ #|#|◆##-  ·   ·· #                   
              .    #        · ·     +###+   ####### ·     · #                   
          .        #                        |# #\   · · ··  #.              .
