src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_c__tests__isfahan_clip_40x12.snap
---
source: src/modes/_101_p02_glm53f_max_c.rs
assertion_line: 787
expression: "text(&frame(40, 12, 42, 0.0, &knobs()))"
---
           '      '.   .                
                                      ' 
                                        
                   ''           .       
           \\\     ''  :::   ///       .
           %% ::%%##·#%%  %  /##   '    
         ## \%%###-· · ··%  /           
             #####◇·#· ···#%/##         
  :       ##  +##+###+···· ·  #         
           %  ··\ #|#◇#·····%/##        
  :       ●● ···· #◇#-· ··##●●          
 .        #       #x\ ··· +###    .
